# FinAgent

./: .gitignore  README-en.md  README.md  agent.py  config.yml  mcp_server.py  pyproject.toml  todo_list.md  verify_planner.py  verify_stock_search.py
chroma_db/012b87d1-7960-410e-b049-5f1b4e3cc62a/: index_metadata.pickle
config/: __init__.py  loader.py
finagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm/: gemini_client.py  ollama_client.py
reports/: investment_analysis_20260223_094648.md  stock_analysis_20260223_110237.md  stock_analysis_20260224_003214.md  stock_analysis_20260224_004851.md  stock_analysis_20260224_005508.md  stock_analysis_20260224_010907.md  stock_analysis_20260224_012427.md  stock_analysis_20260224_020523.md  stock_analysis_20260224_112148.md  stock_analysis_20260224_113304.md  人工智能行业最新研究报告_20260224_011022.md  分析最近A股AI行业的行情并生成报告_20260223_093038.md  最近科技行业市场状况如何_20260223_093155.md  英伟达NVDA的实时股价报告_20260224_011352.md
scripts/: init_rag.py  list_reports.py  move_reports.py  rename_reports.py  reset_and_ingest.py
tools/: __init__.py  akshare_search.py  calculator.py  generate_financial_report.py  generate_report.py  get_current_time.py  report_retriever.py
utils/: mcp.py  memory.py  nodes.py  rag.py  summary.py  utils.py
